[translations] NL update thanks Rob.

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-01 13:09+0100\n"
-"PO-Revision-Date: 2012-08-01 18:54+0100\n"
+"POT-Creation-Date: 2012-08-05 20:05+0100\n"
+"PO-Revision-Date: 2012-08-06 08:12+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -404,6 +404,9 @@ msgstr "??"
 
 msgid "A"
 msgstr "A"
+
+msgid "A background update check is is progress, please wait a few minutes and try again."
+msgstr "Op de achtergrond wordt een controle uitgevoerd. Wacht een paar minuten en probeer het opnieuw."
 
 #, python-format
 msgid ""
@@ -2784,14 +2787,17 @@ msgstr "Ga naar volgende kanaal pagina"
 msgid "Goto specific data/time"
 msgstr "Ga naar specifieke datum/tijd"
 
-msgid "Graph MEpg Settings"
-msgstr "Graph MEpg Instellingen"
+msgid "GraphMultiEpg Settings"
+msgstr "GraphMultiEpg instellingen"
 
 msgid "Graphical EPG..."
 msgstr "Graphische EPG..."
 
 msgid "Graphical Multi EPG"
 msgstr "Grafische Multi EPG"
+
+msgid "Graphics"
+msgstr "Grafisch"
 
 msgid "Greek"
 msgstr "Grieks"
@@ -2946,6 +2952,9 @@ msgstr "Indie 'ja' is gekozen, is er tijdens timeshift een speciale 'seekbar' be
 
 msgid "If set to 'yes' channels without EPG will not be shown."
 msgstr "Indien u 'ja' kiest, zullen kanalen zonder EPG niet getoond worden."
+
+msgid "If set to 'yes' epg will show 3D effect view."
+msgstr "Als 'Ja' wordt gekozen, ziet u 3D effecten."
 
 msgid "If set to 'yes' shows a small TV-screen in the EPG."
 msgstr "Indien u 'ja' kiest, zal het TV beeld in een klein schermpje in de EPG worden getoond."
@@ -4103,7 +4112,7 @@ msgid "On"
 msgstr "Aan"
 
 msgid "On end of movie"
-msgstr "Bij het einde van "
+msgstr "Bij het einde van bestand"
 
 msgid "On raching the end of a file during playback, you can choose the box's behaviour."
 msgstr "Hiert stelt u in wat er gebeurt als tijdens het afspelen het einde van een opname wordt bereikt."
@@ -6407,6 +6416,9 @@ msgstr "Test de netwerkconfiguratie van uw STB_BOX.\n"
 msgid "Test-Messagebox?"
 msgstr "Test-berichtbox?"
 
+msgid "Text"
+msgstr "Tekst"
+
 msgid "Text border width"
 msgstr "Tekst randbreedte"
 
@@ -7538,6 +7550,9 @@ msgstr "Bekijk de lijst met beschikbare software extensies"
 
 msgid "View list of available system extensions"
 msgstr "Bekijk de lijst met beschikbare systeem extensies"
+
+msgid "View mode"
+msgstr "Bekijk modus"
 
 msgid "View teletext..."
 msgstr "Teletekst weergeven..."
@@ -9543,61 +9558,3 @@ msgstr "zap"
 
 msgid "zapped"
 msgstr "zapte"
-
-#~ msgid ""
-#~ " has been sent to the ViX beta team.\n"
-#~ "please quote "
-#~ msgstr ""
-#~ " verstuurd naar het ViX beta team.\n"
-#~ "refereer naar "
-
-#~ msgid "* = Close EPG Required"
-#~ msgstr "* = Herstart EPG noodzakelijk"
-
-#~ msgid "EPG button mode"
-#~ msgstr "EPG toets toont:"
-
-#~ msgid "If set to 'yes' shows the channel names in the EPG."
-#~ msgstr ""
-#~ "Indien u 'ja' kiest, zullen de kanaal namen in de EPG getoond worden."
-
-#~ msgid "If set to 'yes' shows the channel picons in the EPG."
-#~ msgstr ""
-#~ "Indien u 'ja' kiest, zullen  de picons naast de kanaalnaam in de EPG "
-#~ "getoond worden."
-
-#~ msgid "Image Release Notes"
-#~ msgstr "Image release aantekeningen"
-
-#~ msgid "Picture in Graphics*"
-#~ msgstr "Picture in Graphics*"
-
-#~ msgid "Select what you want the EPG button to activate:"
-#~ msgstr "Stel in wat de EPG-toets moet doen:"
-
-#~ msgid "Service width"
-#~ msgstr "Service breedte"
-
-#~ msgid "Set the width allocated to the service name."
-#~ msgstr "Stelt de ruimte in voor een kanaal naam."
-
-#~ msgid "Show CoolTVGuide"
-#~ msgstr "Toon CoolTVGuide"
-
-#~ msgid "Show Graphical EPG"
-#~ msgstr "Toon grafische EPG"
-
-#~ msgid "Show Multi EPG"
-#~ msgstr "Toon Multi EPG"
-
-#~ msgid "Show Picons"
-#~ msgstr "Toon Picons"
-
-#~ msgid "Show Service Names "
-#~ msgstr "Toon kanaalnamen"
-
-#~ msgid "Show Single EPG"
-#~ msgstr "Toon zender-EPG"
-
-#~ msgid "View Changes"
-#~ msgstr "Bekijk veranderingen"
