cosmetics in cs.po
Signed-off-by: Mirakels <mirakels@users.sourceforge.net>

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ims\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-05 13:21+0200\n"
+"POT-Creation-Date: 2012-08-12 21:02+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims21@users.sourceforge.net>\n"
@@ -986,7 +986,7 @@ msgstr "Při zastavení přehrávaného filmu"
 
 #
 msgid "Behavior when a movie reaches the end"
-msgstr "Při dokončení přehrávání filmu"
+msgstr "Po skončení přehrávání filmu"
 
 #
 msgid "Bitrate:"
@@ -1000,7 +1000,7 @@ msgstr "Černá obrazovka do uzamčení"
 
 #
 msgid "Block noise reduction"
-msgstr "Bloková redukce šumu"
+msgstr "Bloková redukce šumu (BNR)"
 
 #
 msgid "Blue boost"
@@ -3323,7 +3323,7 @@ msgstr "Pondělí"
 
 #
 msgid "Mosquito noise reduction"
-msgstr "Bodová (mosquito) redukce šumu"
+msgstr "Bodová redukce šumu (MNR)"
 
 #
 msgid "Mount"
@@ -3851,7 +3851,7 @@ msgid "On"
 msgstr "Zapnuto"
 
 msgid "On end of movie"
-msgstr "Na konci filmu"
+msgstr "Po skončení filmu"
 
 #
 msgid "One"
@@ -4439,7 +4439,7 @@ msgstr "Předchozí"
 
 #
 msgid "Preview"
-msgstr "Prohlížet"
+msgstr "náhled"
 
 #
 msgid "Preview menu"
@@ -6597,7 +6597,7 @@ msgstr ""
 
 #
 msgid "Unattended upgrade without GUI and reboot system"
-msgstr "Bezobslužná aktualizace bez restartu enigmy a boxu"
+msgstr "Bezobslužná aktualizace a restart přijímače"
 
 #
 msgid "Uncommitted DiSEqC command"
@@ -6659,15 +6659,15 @@ msgstr "Zdroj aktualizací není k dispozici."
 
 #
 msgid "Updates your receiver's software"
-msgstr "Aktualizujte software Vašeho přijímače"
+msgstr "Aktualizace software Vašeho přijímače"
 
 #
 msgid "Updating finished. Here is the result:"
-msgstr "Aktualizace hotova. Tady je výsledek:"
+msgstr "Aktualizace je hotova. Výsledek:"
 
 #
 msgid "Updating software catalog"
-msgstr "Katalog aktualizací"
+msgstr "Aktualizace katalogu programů"
 
 #
 msgid "Updating... Please wait... This can take some minutes..."
@@ -6675,7 +6675,7 @@ msgstr "Aktualizuje se... Prosím, čekejte... může to trvat několik minut...
 
 #
 msgid "Upgrade and ask to reboot"
-msgstr "Aktualizovat a požádat o restart boxu"
+msgstr "Aktualizovat a požádat o restart přijímače"
 
 #
 msgid "Upgrade finished."
